--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'recepfont'; 
-    src: url('https://github.com/simplyykin/platnum/blob/main/penis.ttf');
+    src: url('penis.ttf');
 }
 
 .textclas {
