--- a/style.css
+++ b/style.css
@@ -3,7 +3,31 @@
     src: url('penis.ttf');
 }
 
-.textclas {
+p {
     font-family: 'recepfont';
-    color: #01A600;
+  color: #01A600;
+}
+h1 {
+  color: #01A600;
+  font-size: 50px;
+}
+#banner {
+  position: absolute;
+  top: 0px;
+  left: 0px; 
+
+  margin: 0 auto;
+  text-align: center;
+}
+
+#banner_contents {
+  width: 800px;
+}
+.fit {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+body {
+  background-color: #262626;
 }
